[gd_scene load_steps=56 format=3 uid="uid://dtin2i603kyl0"]

[ext_resource type="Texture2D" uid="uid://djdhem3mdr66o" path="res://src/Assets/Sprites/MainShip/model/States/FullHP.png" id="1"]
[ext_resource type="Script" path="res://src/actors/MC/MC.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://16pf4wpgxx7y" path="res://src/Assets/Sprites/MainShip/effects/MainEffects/Main Ship - Shields - Invincibility Shield.png" id="3"]
[ext_resource type="AudioStream" uid="uid://d427m0l2vqou" path="res://src/Assets/Sound/MainShipSound/Blaster.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://6k6rarf2pqyy" path="res://src/Assets/Sound/SoundEffects/Infinite Loops (Background Music)/273562__n_audioman__hit_hurt39.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://c5yhuj71ctnj7" path="res://src/Assets/Sound/MainShipSound/shield.wav" id="6"]
[ext_resource type="Texture2D" uid="uid://le2ywfd8q28x" path="res://src/Assets/Sprites/MainShip/effects/MainEffects/ShieldBonus.png" id="7"]
[ext_resource type="Texture2D" uid="uid://duh3b4m2wjp8y" path="res://src/Assets/Sprites/MainShip/Engine/Main Ship - Engines - Base Engine - Powering.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bklw25wq4ue3h" path="res://src/Assets/Sprites/MainShip/Engine/Main Ship - Engines - Base Engine - Idle.png" id="9"]
[ext_resource type="AudioStream" uid="uid://d0vhi2l120h1y" path="res://src/Assets/Sound/MainShipSound/GameOver.mp3" id="10"]
[ext_resource type="Texture2D" uid="uid://bhpig8igryobe" path="res://src/Assets/Sprites/MainShip/model/States/SemiHP.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cj7lvrxh87h3x" path="res://src/Assets/Sprites/MainShip/model/States/VeryLowHP.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dx7xsgbea2fwd" path="res://src/Assets/Sprites/MainShip/model/States/LowHP.png" id="13"]
[ext_resource type="Texture2D" uid="uid://djcdngnoe1t1w" path="res://src/Assets/Sprites/MainShip/model/Death/McDeath.png" id="14"]
[ext_resource type="AudioStream" uid="uid://d2d065a0qpjei" path="res://src/Assets/Sound/MainShipSound/BLLTRico_Ricochet Metallic_04.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://cvcqiv72r1m1t" path="res://src/Assets/Sound/BonusesSound/active.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://dnd6f86xeef6g" path="res://src/Assets/Sound/BonusesSound/passive.mp3" id="17"]

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("9")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("9")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("9")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}, {
"duration": 1.0,
"texture": SubResource("27")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}],
"loop": true,
"name": &"powering",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="56"]
atlas = ExtResource("14")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="57"]
atlas = ExtResource("14")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="58"]
atlas = ExtResource("14")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="59"]
atlas = ExtResource("14")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="60"]
atlas = ExtResource("14")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="61"]
atlas = ExtResource("14")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="55"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("56")
}, {
"duration": 1.0,
"texture": SubResource("57")
}, {
"duration": 1.0,
"texture": SubResource("58")
}, {
"duration": 1.0,
"texture": SubResource("59")
}, {
"duration": 1.0,
"texture": SubResource("60")
}, {
"duration": 1.0,
"texture": SubResource("61")
}],
"loop": false,
"name": &"Death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"FullHP",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13")
}],
"loop": true,
"name": &"LowHP",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11")
}],
"loop": true,
"name": &"SemiHP",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12")
}],
"loop": true,
"name": &"VeryLowHP",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("3")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("3")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("3")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("3")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("7")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource("7")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("7")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource("7")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="51"]
atlas = ExtResource("7")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="52"]
atlas = ExtResource("7")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="53"]
atlas = ExtResource("7")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="54"]
atlas = ExtResource("7")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="14"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}, {
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("39")
}, {
"duration": 1.0,
"texture": SubResource("40")
}, {
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}],
"loop": true,
"name": &"autoshield",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}, {
"duration": 1.0,
"texture": SubResource("47")
}, {
"duration": 1.0,
"texture": SubResource("48")
}, {
"duration": 1.0,
"texture": SubResource("49")
}, {
"duration": 1.0,
"texture": SubResource("50")
}, {
"duration": 1.0,
"texture": SubResource("51")
}, {
"duration": 1.0,
"texture": SubResource("52")
}, {
"duration": 1.0,
"texture": SubResource("53")
}, {
"duration": 1.0,
"texture": SubResource("54")
}],
"loop": true,
"name": &"invincibility",
"speed": 24.0
}]

[node name="MC" type="Area2D"]
z_index = 1
position = Vector2(150, 300)
collision_layer = 2
collision_mask = 57
gravity = 0.0
script = ExtResource("2")
mcSpeed = 500.0
mcHP = 20
mcDamage = 2
duringShieldBonus = 5.0

[node name="EngineSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
rotation = 1.5755
scale = Vector2(2, 2)
sprite_frames = SubResource("32")
animation = &"idle"

[node name="MCSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.82739, 1.82739)
sprite_frames = SubResource("55")
animation = &"Death"

[node name="CrushEffects" type="CPUParticles2D" parent="."]
position = Vector2(0, -6)
emitting = false
amount = 5
lifetime = 3.0
explosiveness = 0.35
randomness = 1.0
lifetime_randomness = 0.66
direction = Vector2(-1, 0)
spread = 180.0
gravity = Vector2(-100, 0)
color = Color(1, 0.858824, 0, 1)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(0, 2)
polygon = PackedVector2Array(24, 0, 7, 10, -8, 25, -24, 25, -23, -30, -9, -30, 9, -11, 23, -7)

[node name="Muzzle" type="Marker2D" parent="." groups=["player"]]
visible = false
position = Vector2(35, 0)

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(0, -1)
limit_top = -50
limit_bottom = 650
limit_smoothed = true

[node name="Shield" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(3, 0)
rotation = 1.5708
scale = Vector2(1.9, 1.95)
sprite_frames = SubResource("14")
animation = &"autoshield"
frame = 3

[node name="Audio" type="AudioStreamPlayer" parent="."]

[node name="Destroyed" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10")
volume_db = -14.017

[node name="ShotSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4")
volume_db = -22.608

[node name="Hit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5")
volume_db = -19.656

[node name="ShieldHit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6")
volume_db = -25.0

[node name="Ricochet" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("15")
volume_db = -20.671

[node name="ActiveBonus" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("16")
volume_db = -25.0

[node name="PassiveBonus" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("17")
volume_db = -25.0
pitch_scale = 0.75

[connection signal="area_entered" from="." to="." method="_on_MC_area_entered"]
